This file documents the revision history for Perl extension HTTP::Body.

1.06    
        - Fixed parsing of multipart bodies with boundaries that contain commas.
          (Tomas Doran, http://rt.cpan.org/Public/Bug/Display.html?id=41407)

1.05    2008-12-01 17:15:00
        - Removed useless eval + require in new().

1.04    2008-06-23 16:00:00
        - Added tmpdir() accessor to specify an alternate directory for temp files.
          (jgoulah)

1.03    2008-04-07 08:20:00
        - Set body value for XForms data. (Daniel Ruoso)

1.02    2008-02-27 17:30:00
        - Fixed issue with urlencoded test on Windows.

1.01    2008-02-23 11:30:00
        - Fixed performance issue with urlencoded regex.

1.00    2008-02-23 11:00:00
        - Added support for chunked requests if no $length value is passed to new().
        - Added support for XForms submissions. (Daniel Ruoso)
        - Fixed urlencoded parser to handle spaces after semicolons and equal signs
          in the value. (Tom Heady, http://rt.cpan.org/Ticket/Display.html?id=31055)
        - Fixed multipart test to properly clean up temporary files.

0.9   2007-03-27 14:00:00
        - Fixed bug where empty fields in multipart/form-data were ignored.
          (Ton Voon)
        - Fixed bug where an uploaded file with the name "0" was ignored.
          (Ton Voon)
        - Small performance improvements to urlencoded parser.

0.8   2007-03-23 18:40:00
        - Some browsers such as MSIE send extra data after the body content.
          We now properly ignore anything beyond Content-Length.

0.7   2007-03-23 10:00:00
        - Fixed parsing an empty (zero-length) file using multipart.
          http://rt.cpan.org/NoAuth/Bug.html?id=25392

0.6   2006-01-06 00:00:00
        - Fixed buffer bug in OctetStream, reported by Daisuke Murase
          <typester@cpan.org>.
        - Fixed YAML prereq, reported by Jess Robinson
        - Added tests, Ben Trott <ben@sixapart.com>.

0.5   2005-11-17 00:00:00